--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.9.6",
